<resources>
    <string name="app_name">PWD / Señior Citizen Booklet</string>
    <string name="welcome_starter_heading">Welcome to PWD / Señior Citizen Booklet!</string>
    <string name="welcome_starter_msg">Write your starter message here.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="starter_service_msg">By logging in of registering, I agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="login_msg">Welcome back, login to continue using our app!</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="error_email">Invalid email!</string>
    <string name="error_username">Invalid! Username too short.</string>
    <string name="error_password_policy">Password should be minimum 5 characters long,\n
        |should contain at least one capital letter,\n
        |at least one small letter</string>
    <string name="ok">OK</string>
    <string name="ScanDialogTitle">Scan Complete</string>
    <string name="ViewDialogTitle">Transaction Details</string>
    <string name="ScanDialogFailedTitle">Scan Failed</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="error_empty_password">Fill the password!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_not_have_account_msg">Don\'t have an account ?</string>
    <string name="register_msg">Hello there, let\'s join us</string>
    <string name="first_name">First name</string>
    <string name="error_name">Min 4 character!</string>
    <string name="register_last_name">Last name</string>
    <string name="register_birthday">Birthday</string>
    <string name="register_sex">Sex</string>
    <string name="register_sex_male">Male</string>
    <string name="register_sex_female">Female</string>
    <string name="register_address">Address</string>
    <string name="register_user_name">username</string>
    <string name="register_password">password</string>
    <string name="register_middle_name">Middle name</string>
    <string name="register_is_pwd">PWD</string>
    <string name="register_is_senior">Senior</string>
    <string name="error_password">Min 8 character!</string>
    <string name="register_service_msg">By registering, I agree to our</string>
    <string name="register_have_account_msg">Already have an account ?</string>
    <string name="verification_heading">Oops! Who is there?</string>
    <string name="verification_msg">Your email doesn\'t verified.\nPlease, verify your email to active your account!</string>
    <string name="verification_us_msg">Verification has not been sent ?</string>
    <string name="contact_us">Contact us</string>
    <string name="activate_account">Activate Account</string>
    <string name="registration_success">Registration Successfully!</string>
    <string name="login_success">Login Successfully!</string>
    <string name="error_registration_account_with_same_email_already_exist">Account with the same email is already exist!</string>
    <string name="error_login_email_is_not_registered">Email is not Registered!</string>
    <string name="error_login_wrong_password">Wrong password!</string>
    <string name="error_401">Bad Request!</string>
    <string name="success_email_verification_was_sent">Email verification was sent!</string>

    <!-- Profile string -->
    <string name="profile_label_name">Name:</string>
    <string name="profile_label_address">Address:</string>
    <string name="profile_label_birthday">Birthday:</string>
    <string name="profile_label_age">Age:</string>
    <string name="profile_label_sex">Sex:</string>
    <string name="profile_label_id_number">ID number:</string>

    <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="home">My Profile</string>
    <string name="transaction">Transaction History</string>
    <string name="scan_title">Scan QR Code</string>
    <string name="scanner">QR Scanner</string>
    <string name="deeplink">Deep Link</string>

    <string name="profile_page_title">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_page_welcome_text">Looking good! It\'s your profile</string>
    <string name="profile_page_age_label">Age: </string>
    <string name="profile_id_number">ID Number</string>

</resources>
