<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/profile_dest">

    <fragment
        android:id="@+id/profile_dest"
        android:name="com.seniorcitizen.app.ui.profile.ProfileFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/transaction_dest"
        android:name="com.seniorcitizen.app.ui.transaction.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/action_transaction_dest_to_scan_dest"
            app:destination="@id/scan_dest" />
    </fragment>

    <fragment android:id="@+id/scan_dest"
        android:name="com.seniorcitizen.app.ui.scan.ScanFragment"
        android:label="@string/scan_title"
        tools:layout="@layout/fragment_scan"/>


</navigation>