<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.seniorcitizen.app.data.model.Entity.SeniorCitizen" />
        <variable
            name="viewmodel"
            type="com.seniorcitizen.app.ui.home.HomeActivityViewModel" />
		<variable
			name="viewmodelProfile"
			type="com.seniorcitizen.app.ui.profile.ProfileViewModel" />
    </data>

<ScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
	android:id="@+id/clt_parent"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:id="@+id/iv_bg_login"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="centerCrop"
		android:src="@drawable/bg_starter"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="ContentDescription" />

	<androidx.cardview.widget.CardView
			android:id="@+id/iv_profileImage"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_vertical"
			android:layout_marginStart="10dp"
			android:background="@drawable/bg_field"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="1.0">

			<ImageView
				android:id="@+id/iv_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:scaleType="centerCrop"
				android:src="@mipmap/ic_launcher_round"/>

		</androidx.cardview.widget.CardView>

		<TextView
			android:id="@+id/tv_labelName"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_name"
			app:layout_constraintTop_toBottomOf="@id/iv_profileImage"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintStart_toEndOf="parent" />

		<TextView
			android:id="@+id/tv_labelAddress"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_address"
			app:layout_constraintTop_toBottomOf="@id/tv_labelName"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintStart_toEndOf="parent" />

		<TextView
			android:id="@+id/tv_labelBirthday"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_birthday"
			app:layout_constraintTop_toBottomOf="@id/tv_labelAddress"
			app:layout_constraintStart_toStartOf="parent" />

		<TextView
			android:id="@+id/tv_labelAge"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_age"
			app:layout_constraintTop_toBottomOf="@id/tv_labelBirthday"
			app:layout_constraintStart_toStartOf="parent" />

		<TextView
			android:id="@+id/tv_labelSex"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_sex"
			app:layout_constraintTop_toBottomOf="@id/tv_labelAge"
			app:layout_constraintStart_toStartOf="parent" />

		<TextView
			android:id="@+id/tv_labelIDnumber"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@string/profile_label_id_number"
			app:layout_constraintTop_toBottomOf="@id/tv_labelSex"
			app:layout_constraintStart_toStartOf="parent" />

		<!--TextViews data-->
		<TextView
			android:id="@+id/tv_name"
			style="@style/TextPrimaryHeadingStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_secondary"
			android:layout_marginTop="@dimen/margin_vertical"
			android:text="@{viewmodelProfile.getUserFullName()}"
			app:layout_constraintStart_toEndOf="@+id/tv_labelName"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toBottomOf="@id/iv_profileImage"/>

	<TextView
		android:id="@+id/tv_address"
		style="@style/TextPrimaryHeadingStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_secondary"
		android:layout_marginTop="@dimen/margin_vertical"
		android:text="@{user.address}"
		app:layout_constraintStart_toEndOf="@+id/tv_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@id/tv_name"/>

	<TextView
		android:id="@+id/tv_birthday"
		style="@style/TextPrimaryHeadingStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_secondary"
		android:layout_marginTop="@dimen/margin_vertical"
		android:text="@{user.birthday}"
		app:layout_constraintStart_toEndOf="@+id/tv_address"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@id/tv_address"/>

	<TextView
		android:id="@+id/tv_age"
		style="@style/TextPrimaryHeadingStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_secondary"
		android:layout_marginTop="@dimen/margin_vertical"
		android:text="age"
		app:layout_constraintStart_toEndOf="@+id/tv_birthday"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@id/tv_birthday"/>

	<TextView
		android:id="@+id/tv_sex"
		style="@style/TextPrimaryHeadingStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_secondary"
		android:layout_marginTop="@dimen/margin_vertical"
		android:text="@{user.sex}"
		app:layout_constraintStart_toEndOf="@+id/tv_age"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@id/tv_age"/>

	<TextView
		android:id="@+id/tv_id_number"
		style="@style/TextPrimaryHeadingStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_secondary"
		android:layout_marginTop="@dimen/margin_vertical"
		android:text="@{user.idNumber}"
		app:layout_constraintStart_toEndOf="@+id/tv_sex"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintTop_toBottomOf="@id/tv_sex"/>

</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</layout>
